2018-08-13  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Declare array size member as size_t.

	* src/filterrtf.cpp (RTFToken):
	  - Declare RTFToken::valLen as size_t instead of int,
	    fixing "signedness" compiler warning when comparing size.

2018-08-13  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Add missing virtual d-tors.

	* conv/convkit.h (TextReader, TextWriter):
	  - Add missing virtual d-tors to the abstract base classes,
	    fixing compiler warnings.

2018-08-13  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop commented midatrie stuff.

	* src/Makefile.am:
	  - Drop commented stuff on using ancient midatrie.

2018-08-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Normalize include guard macros in headers.

	* conv/conv.h:
	* conv/convfact.h:
	* conv/convkit.h:
	* conv/tis620.h:
	* conv/tischar.h:
	* conv/unichar.h:
	* conv/utf8.h:
	  - Normalize include guard macros based on file name.

2018-08-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop "#pragma once" in headers.

	It's not portable, and multiple include optimization
	in compilers just make "#ifndef" idiom have the same effect.

	* src/abswordseg.h:
	* src/filefilter.h:
	* src/filterhtml.h:
	* src/filterlambda.h:
	* src/filterlatex.h:
	* src/filterrtf.h:
	* src/filterx.h:
	* src/longwordseg.h:
	* src/maxwordseg.h:
	* src/wordstack.h:
	  - Drop "#pragma once".

2018-08-08  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Use HTTPS in linux.thai.net URLs

	* AUTHORS:
	  - Use HTTPS in thailatex and libthai project URLs.

2018-08-05  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update dictionary from thailatex GitHub.

	* data/Makefile.am:
	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-country.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* +data/tdict-slang.txt:
	* data/tdict-spell.txt: